test/variable/duplicate_local.lox
{
  var a = "value"
  var a = "other" // error: already declared variable in this scope
}
